# Turntable

./: .gitignore  .valalintignore  .woodpecker.yml  Makefile  README.md  Turntable.doap  meson.build  meson_options.txt
.forgejo/ISSUE_TEMPLATE/: bug-report.yaml
.forgejo/workflows/: build.yaml
.github/workflows/: build.yml
build-aux/: dev.geopjr.Turntable.json
data/: dev.geopjr.Turntable.desktop.in  dev.geopjr.Turntable.gresource.xml  dev.geopjr.Turntable.gschema.xml  dev.geopjr.Turntable.metainfo.xml.in  meson.build  style.css
data/icons/: meson.build
data/ui/gtk/dropdown/: client.ui  client_display.ui
po/: LINGUAS  POTFILES  POTFILES.in  de.po  dev.geopjr.Turntable.pot  es.po  et.po  fa.po  fi.po  fr.po  id.po  it.po  nl.po  pt_BR.po  ru.po  vi.po  zh_CN.po  zh_Hans.po
src/: Application.vala  Build.vala.in  meson.build
src/Mpris/: DBus.vala  Entry.vala  Manager.vala  meson.build
src/Scrobbling/: Accounts.vala  LastFM.vala  LibreFM.vala  ListenBrainz.vala  Maloja.vala  Manager.vala  Scrobbler.vala  meson.build
src/Utils/: Cache.vala  Celebrate.vala  Cli.vala  Color.vala  Host.vala  Settings.vala  Thief.vala  meson.build
src/Views/: LibreFMPage.vala  ListenBrainzPage.vala  MalojaPage.vala  OfflineScrobbling.vala  Preferences.vala  ProviderPage.vala  ScrobblerSetup.vala  Window.vala  Wrapped.vala  meson.build
src/Widgets/: ControlsOverlay.vala  Cover.vala  MPRISControls.vala  Marquee.vala  ProgressBin.vala  ProgressScale.vala  Tonearm.vala  meson.build
